# transcodio

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt  skills-lock.json
.claude/: settings.local.json
api/: main.py
modal_app/: app.py
static/: app.js  index.html  styles.css
utils/: audio.py
