[project]
name = "transcodio"
version = "0.1.0"
description = "AI platform for audio transcription, voice cloning, and image generation on Modal"
requires-python = ">=3.12"
dependencies = [
    # Modal CLI and remote function calls
    "modal>=1.3.0",

    # FastAPI web server
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",

    # Audio preprocessing (runs locally before sending to Modal)
    "ffmpeg-python>=0.2.0",

    # API / streaming
    "python-multipart>=0.0.21",
    "sse-starlette>=3.1.2",
    "aiofiles>=25.1.0",

    # Security
    "slowapi>=0.1.9",

    # Utilities
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "utils"]
